--- a/Aplicacion-Spotify/src/app/components/home/home.component.html
+++ b/Aplicacion-Spotify/src/app/components/home/home.component.html
@@ -1,5 +1,15 @@
-<ul>
-  <li *ngFor="let pais of paises">
-      {{pais.name}} 
-  </li>
-</ul>
+
+<div class="text-center">
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col" *ngFor="let cancion of nuevasCanciones">
+    <div class="card h-100" >
+      <img [src]="cancion.images[0].url" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
