--- a/Aplicacion-Spotify/src/app/components/home/home.component.html
+++ b/Aplicacion-Spotify/src/app/components/home/home.component.html
@@ -5,11 +5,12 @@
     <div class="card h-100" >
       <img [src]="cancion.images[0].url" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title"> {{cancion.name}} </h5>
+        <span *ngFor="let artista of cancion.artists" class="badge rounded-pill bg-primary">
+          {{artista.name}}
+        </span>
       </div>
     </div>
   </div>
 </div>
 </div>
-
