--- a/Aplicacion-Spotify/src/app/components/search/search.component.html
+++ b/Aplicacion-Spotify/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row pb-5">
   <div class="col">
     <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" >
   </div>
