--- a/Aplicacion-Spotify/src/app/components/search/search.component.html
+++ b/Aplicacion-Spotify/src/app/components/search/search.component.html
@@ -6,14 +6,5 @@
 
 
 <div class="text-center">
-  <div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col" *ngFor="let artista of artistas">
-    <div class="card h-100" >
-      <img [src]="artista.images | noimage" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"> {{artista.name}} </h5>
-      </div>
-    </div>
-  </div>
-</div>
+  <app-tarjetas [items]="artistas"></app-tarjetas>
 </div>
