--- a/Aplicacion-Spotify/src/app/components/home/home.component.html
+++ b/Aplicacion-Spotify/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 
-<app-loading></app-loading>
+<app-loading *ngIf="loading" ></app-loading>
 
 <app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
