--- a/Aplicacion-Spotify/src/app/components/loading/loading.component.html
+++ b/Aplicacion-Spotify/src/app/components/loading/loading.component.html
@@ -1,1 +1,7 @@
-<p>loading works!</p>
+<div class="row text-center pb-5 animated fadeIn">
+  <div class="col">
+
+    <i class= "fa fa-sync-alt fa-spin fa-5x"></i>
+
+  </div>
+</div>
