--- a/Aplicacion-Spotify/src/app/components/search/search.component.html
+++ b/Aplicacion-Spotify/src/app/components/search/search.component.html
@@ -6,5 +6,8 @@
 
 
 <div class="text-center">
-  <app-tarjetas [items]="artistas"></app-tarjetas>
+
+  <app-loading *ngIf="loading" ></app-loading>
+
+  <app-tarjetas *ngIf="!loading" [items]="artistas"></app-tarjetas>
 </div>
