--- a/Aplicacion-Spotify/src/app/components/tarjetas/tarjetas.component.html
+++ b/Aplicacion-Spotify/src/app/components/tarjetas/tarjetas.component.html
@@ -1,5 +1,5 @@
 
-<div class="text-center">
+<div class="text-center animated fadeIn">
   <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col" *ngFor="let item of items">
     <div class="card h-100" >
