--- a/Aplicacion-Spotify/src/app/components/artista/artista.component.html
+++ b/Aplicacion-Spotify/src/app/components/artista/artista.component.html
@@ -1,4 +1,6 @@
-<div class="row">
+<app-loading *ngIf="loadingArtist" ></app-loading>
+
+<div class="row" *ngIf="!loadingArtist">
   <div class="col-l2">
     <img [src]="artista.images | noimage" class="img-thumbnail img-circle">
   </div>
