--- a/Aplicacion-Spotify/src/app/components/artista/artista.component.html
+++ b/Aplicacion-Spotify/src/app/components/artista/artista.component.html
@@ -1,6 +1,6 @@
 <app-loading *ngIf="loadingArtist" ></app-loading>
 
-<div class="row" *ngIf="!loadingArtist">
+<div class="row animated fadeIn" *ngIf="!loadingArtist">
   <div class="col-l2">
     <img [src]="artista.images | noimage" class="img-thumbnail img-circle">
   </div>
